# ActivePixelLearn

./: CMakeLists.txt  README.md  StdFeatures.py  compute_pixel_features.py  compute_spgradient.cpp  compute_vi.h  pixel_detect_wshed.h  pixel_detector.cpp  pixel_detector.h  predict_pixels.cpp  test_vigra_watershed.cpp
Classifier/: CMakeLists.txt  edgeclassifier.h  opencvRFclassifier.cpp  opencvRFclassifier.h  vigraRFclassifier.cpp  vigraRFclassifier.h
SemiSupervised/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kmeans.cpp  kmeans.h  weightmatrix_iter.cpp  weightmatrix_iter.h
SemiSupervised/amgcl/: amgcl.hpp~  cg.hpp~  profiler.hpp  profiler.hpp~  tictoc.hpp~
Utilities/: CMakeLists.txt  Dataset.cpp  Dataset.h  h5read.h  h5write.h  unique_row_matrix.h
Watershed/: vigra_watershed_uint.h
